# Modern-Weather-App

./: CMakeLists.txt  CNAME  README.md  app.rc  main.cpp
Models/: currentWeatherModel.cpp  currentWeatherModel.h  forecastModel.cpp  forecastModel.h
Resources/: resource.rc  resources.qrc
UI/Home/: Home.cpp  Home.h  currentWeatherCard.cpp  currentWeatherCard.h  forecastCard.cpp  forecastCard.h
UI/Settings/: settings.cpp  settings.h
utils/: fontLoader.cpp  fontLoader.h
